--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -49,7 +49,7 @@
 
     </div>
   <% end %>
-  <div class="w-full ml-2">
+  <div class="w-full ml-2 mt-4 lg:mt-0">
     <div class="text-center">
       <h1 class="text-2xl">Perturbations (<%= @disturbances.values.sum %>)</h1>
       <p>
@@ -69,7 +69,7 @@
     labels: <%= @disturbances.keys.to_json.html_safe %>,
     datasets: [
       {
-        label: "trains",
+        label: "Trains uniques",
         backgroundColor: "hsl(252, 82.9%, 67.8%)",
         borderColor: "hsl(252, 82.9%, 67.8%)",
         data: <%= @disturbances.values.to_json.html_safe %>,
