--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -52,6 +52,11 @@
                   <i class="fa-solid fa-search"></i>Audit trail
                 <% end %>
               </li>
+              <li>
+                <%= link_to sources_users_path, class:"w-full" do %>
+                  <i class="fa-solid fa-arrows-left-right"></i>Sources/Users
+                <% end %>
+              </li>
             <% end %>
             <hr>
             <li data-turbo="false">
