--- a/app/views/partials/_navbar_items.html.erb
+++ b/app/views/partials/_navbar_items.html.erb
@@ -1,24 +1,24 @@
 <li>
   <%= link_to disturbances_path do %>
-    <i class="fa-solid fa-triangle-exclamation"></i>
+    <i class="fa-solid fa-triangle-exclamation text-primary"></i>
     Perturbations
   <% end %>
 </li>
 <li>
   <%= link_to cancelled_path do %>
-    <i class="fa-solid fa-circle-xmark"></i>
+    <i class="fa-solid fa-circle-xmark text-error"></i>
     Suppressions
   <% end %>
 </li>
 <li class="whitespace-nowrap sm:mr-3">
   <%= link_to status_path do %>
-    <i class="fa-solid fa-school-circle-exclamation"></i>
+    <i class="fa-solid fa-school-circle-exclamation text-success"></i>
     Gares en direct
   <% end %>
 </li>
 <li>
   <%= link_to stats_path, 'data-turbo': false do %>
-    <i class="fa-solid fa-chart-simple"></i>
+    <i class="fa-solid fa-chart-simple text-secondary"></i>
     Statistiques
   <% end %>
 </li>
