--- a/app/views/sources_users/_sources_user.html.erb
+++ b/app/views/sources_users/_sources_user.html.erb
@@ -1,17 +1,12 @@
 <div id="<%= dom_id sources_user %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Source:</strong>
-    <%= sources_user.source.gare %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">User:</strong>
+  <p class="my-5 font-medium">
+    <%= sources_user.source.gare_et_sens %>
     <%= sources_user.user.nom %> <%= sources_user.user.prénom %>
   </p>
 
   <% if action_name != "show" %>
-    <%= link_to "Show this sources user", sources_user, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this sources user', edit_sources_user_path(sources_user), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Show this source / user", sources_user, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Edit this source / user', edit_sources_user_path(sources_user), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
