--- a/app/views/sources_users/edit.html.erb
+++ b/app/views/sources_users/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing sources user</h1>
+  <h1 class="font-bold text-4xl">Editing source / user</h1>
 
   <%= render "form", sources_user: @sources_user %>
 
-  <%= link_to "Show this sources user", @sources_user, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to sources users", sources_users_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Show this source / user", @sources_user, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to sourcee / user", sources_users_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
