--- a/app/views/sources_users/index.html.erb
+++ b/app/views/sources_users/index.html.erb
@@ -1,11 +1,10 @@
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-  <% end %>
-
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Sources users</h1>
-    <%= link_to 'New sources user', new_sources_user_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-4xl">
+      <i class="fa-solid fa-arrows-left-right"></i>
+      Sources/Users
+    </h1>
+    <%= link_to 'New source / user', new_sources_user_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="sources_users" class="min-w-full">
