--- a/app/views/sources_users/new.html.erb
+++ b/app/views/sources_users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New sources user</h1>
+  <h1 class="font-bold text-4xl">New source / user</h1>
 
   <%= render "form", sources_user: @sources_user %>
 
-  <%= link_to 'Back to sources users', sources_users_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to 'Back to source / user', sources_users_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
