--- a/app/views/sources_users/show.html.erb
+++ b/app/views/sources_users/show.html.erb
@@ -2,10 +2,10 @@
   <div class="mx-auto">
     <%= render @sources_user %>
 
-    <%= link_to 'Edit this sources_user', edit_sources_user_path(@sources_user), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Modifier', edit_sources_user_path(@sources_user), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <div class="inline-block ml-2">
-      <%= button_to 'Destroy this sources_user', sources_user_path(@sources_user), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+      <%= button_to 'Supprimer', sources_user_path(@sources_user), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
-    <%= link_to 'Back to sources_users', sources_users_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to 'Retour', sources_users_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
