--- a/app/views/sources_users/index.html.erb
+++ b/app/views/sources_users/index.html.erb
@@ -1,10 +1,10 @@
-<div class="w-full">
+<div class="mx-auto md:w-2/3 mt-8">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">
       <i class="fa-solid fa-arrows-left-right"></i>
       Sources/Users
     </h1>
-    <%= link_to 'New source / user', new_sources_user_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to '+ Source/User', new_sources_user_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="sources_users" class="min-w-full">
