--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,6 @@
     <main class="container mx-auto px-2 mt-8">
       <%= yield %>
     </main>
+    <%= render partial: "partials/footer" unless user_signed_in? %>
   </body>
 </html>
