--- a/app/views/disturbances/index.html.erb
+++ b/app/views/disturbances/index.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full">
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl text-primary mt-1 mb-4">
+    <h1 class="font-bold text-4xl text-warning mt-1 mb-4">
       <i class="fa-solid fa-triangle-exclamation"></i>
       Perturbations
     </h1>
