--- a/app/views/services/_service.html.erb
+++ b/app/views/services/_service.html.erb
@@ -8,13 +8,25 @@
 
     <td>
       <p>
-        <%= service.train %>
+        <%= service.mode %>
+      </p>
+    </td>
+
+    <td>
+      <p>
+        <%= service.numéro_service %>
       </p>
     </td>
 
     <td>
       <p>
         <%= service.horaire %>
+      </p>
+    </td>
+
+    <td>
+      <p>
+        <%= service.origine %>
       </p>
     </td>
 
