--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -8,34 +8,54 @@
   </div>
 
     <%= form_tag services_path, method: :get do %>
-    <div class="flex flex-wrap xl:flex-nowrap">
+      <div class="flex flex-wrap xl:flex-nowrap">
 
       <div class="w-full mr-4">
-        <%= label_tag :date, "Date", class: "label" %>
-        <%= text_field_tag :date,
-                            params[:date],
+        <%= label_tag :du, "Du", class: "label" %>
+        <%= text_field_tag :du,
+                            params[:du],
                             type: "date",
                             class: 'input input-sm input-bordered w-full', 
                             onchange: 'this.form.submit()' %>
       </div>
 
       <div class="w-full mr-4">
-        <%= label_tag :train, "Train(s)", class: "label" %>
-        <%= text_field_tag :train,
-                        params[:train],
+        <%= label_tag :au, "Au", class: "label" %>
+        <%= text_field_tag :au,
+                            params[:au],
+                            type: "date",
+                            class: 'input input-sm input-bordered w-full', 
+                            onchange: 'this.form.submit()' %>
+      </div>
+
+      <div class="w-full mr-4">
+        <%= label_tag :mode, "Mode", class: "label" %>
+        <%= select_tag :mode,
+                        options_for_select(["Train", "Car", "TramTrain"], params[:mode]), 
+                        include_blank: true,
+                        class: 'select select-sm select-bordered w-full', 
+                        onchange: 'this.form.submit()' %>
+      </div>
+
+      <div class="w-full mr-4">
+        <%= label_tag :num_service, "Numéro de service", class: "label" %>
+        <%= text_field_tag :num_service,
+                        params[:num_service],
                         include_blank: true,
                         class: 'input input-sm select-bordered w-full',
                         onchange: 'this.form.submit()' %>
       </div>
 
-            <div class="w-full mr-4">
-        <%= label_tag :destination, "Destination", class: "label" %>
-        <%= text_field_tag :destination,
-                        params[:destination],
+      <div class="w-full mr-4">
+        <%= label_tag :gare, "Gare", class: "label" %>
+        <%= select_tag :gare,
+                        options_for_select(@gares, params[:gare]), 
                         include_blank: true,
-                        class: 'input input-sm select-bordered w-full',
+                        class: 'select select-sm select-bordered w-full', 
                         onchange: 'this.form.submit()' %>
       </div>
+
+
 
     </div>
   <% end %>
@@ -45,8 +65,10 @@
       <thead>
         <tr>
           <th>Date</th>
-          <th>Train</th>
+          <th>Mode</th>
+          <th>N°Service</th>
           <th>Horaire</th>
+          <th>Origine</th>
           <th>Destination</th>
         </tr>
       </thead>
@@ -54,7 +76,7 @@
         <%= render @services %>
       </tbody>
       <tfoot>
-        <th colspan=4></th>
+        <th colspan=6></th>
       </tfoot>
     </table>
   </div>
