deconnexion button fixed / footer updated

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,9 +1,8 @@
-<footer class="footer fixed bottom-0 hero bg-base-200 text-center font-bold mt-12">
+<footer class="footer fixed bottom-0 hero text-center font-bold mt-12">
   <ul class="list-unstyled">
     <li class="text-muted">
-      Disturbances est un service proposé par 
-      <%= link_to 'Philnoug & Partners', 'https://philnoug.com', target: '_blank', class:'link' %>
-      - Siret : 384 396 719 00047 - APE : 5829C 
+      Disturbances a été développé par 
+      <%= link_to 'Studio Philnoug & Partners', 'https://philnoug.com', target: '_blank', class:'link' %>
     </li>
   </ul>
 </footer>
