--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -50,8 +50,8 @@
               </li>
             <% end %>
             <hr>
-            <li data-turbo="false">
-              <%= button_to destroy_user_session_path, method: :delete, form_class:'w-full' do %>
+            <li data-turbo="false" class="p-0 w-full">
+              <%= button_to destroy_user_session_path, method: :delete, class:'w-full text-left p-3', form_class:'w-full !p-0' do %>
                 <i class="fa-solid fa-right-from-bracket ml-1 mr-1"></i>
                 Déconnexion
               <% end %>
