--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer fixed bottom-0 hero text-center font-bold mt-12">
   <ul class="list-unstyled">
     <li class="text-muted">
-      Disturbances a été développé par 
-      <%= link_to 'Studio Philnoug & Partners', 'https://philnoug.com', target: '_blank', class:'link' %>
+      Disturbances a été développée par 
+      <%= link_to 'Studio Philnoug & Partners', 'https://www.philnoug.com', target: '_blank', class:'link' %>
     </li>
   </ul>
 </footer>
