company name changed

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -2,7 +2,7 @@
   <ul class="list-unstyled">
     <li class="text-muted">
       Disturbances a été développée par 
-      <%= link_to 'Studio Philnoug & Partners', 'https://www.philnoug.com', target: '_blank', class:'link' %>
+      <%= link_to 'Philnoug Consulting', 'https://www.philnoug.com', target: '_blank', class:'link' %>
     </li>
   </ul>
 </footer>
