--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <body>
     <%= render partial: "partials/navbar" %>
     <%= render partial: "partials/notification" %>
-    <main class="container mx-auto px-2 mt-8">
+    <main class="container mx-auto px-2 mt-8 mb-4">
       <%= yield %>
     </main>
   </body>
