--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -85,7 +85,7 @@
   <%= paginate @services %>
 
   <p class="mt-4">
-    <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)), class: 'btn btn-sm btn-success btn-outline' %>
+    <%= link_to 'Export XLS', url_for(params.permit!.merge(format: :xls)), class: 'btn btn-sm btn-success btn-outline', title: 'Export limité aux 20 000 premiers services' %>
   </p>
 
 </div>
