--- a/app/views/pages/cancelled.html.erb
+++ b/app/views/pages/cancelled.html.erb
@@ -8,27 +8,27 @@
   </div>
 
   <%= form_tag cancelled_path, method: :get do %>
-    <div class="flex flex-wrap xl:flex-nowrap">
+    <div class="flex flex-wrap xl:flex-nowrap gap-4">
 
-      <div class="mr-4">
+      <div class="w-full sm:w-fit">
         <%= label_tag :date, "Le", class: "label" %>
         <%= text_field_tag :date,
                             params[:date],
                             type: "date",
-                            class: 'input input-sm input-bordered w-full max-w-xs', 
+                            class: 'input input-sm input-bordered w-full sm:max-w-xs', 
                             onchange: 'this.form.submit()' %>
       </div>
 
-      <div class="mr-4">
+      <div class="w-full sm:w-fit">
         <%= label_tag :date_fin, "Jusqu'au", class: "label" %>
         <%= text_field_tag :date_fin,
                             params[:date_fin],
                             type: "date",
-                            class: 'input input-sm input-bordered w-full max-w-xs', 
+                            class: 'input input-sm input-bordered w-full sm:max-w-xs', 
                             onchange: 'this.form.submit()' %>
       </div>
 
-      <div class="w-full mr-4">
+      <div class="w-full">
         <%= label_tag :gare, "Gare", class: "label" %>
         <%= select_tag :gare,
                         options_for_select(@gares, params[:gare]), 
@@ -37,7 +37,7 @@
                         onchange: 'this.form.submit()' %>
       </div>
 
-      <div class="w-full mr-4">
+      <div class="w-full">
         <%= label_tag :train, "Train(s)", class: "label" %>
         <%= text_field_tag :train,
                         params[:train],
@@ -46,7 +46,7 @@
                         onchange: 'this.form.submit()' %>
       </div>
 
-      <div class="w-full mr-4">
+      <div class="w-full">
         <%= label_tag :information, "Information", class: "label" %>
         <%= select_tag :information, 
                         options_for_select(@informations, params[:information]), 
@@ -55,7 +55,7 @@
                         onchange: 'this.form.submit()' %>
       </div>
 
-      <div class="self-end">
+      <div class="w-full self-end">
         <%= check_box_tag :source,
                           true,
                           params[:source],
@@ -127,7 +127,7 @@
                 <td>
                   <p>
                     ->
-                    <%= cancelled.destination %>
+                    <%= cancelled.destination.gsub('effacé', '') %>
                   </p>
                 </td>
 
@@ -140,7 +140,7 @@
                 <td>
                   <p>
                     <-
-                    <%= cancelled.provenance %>
+                    <%= cancelled.provenance.gsub('effacé', '') %>
                   </p>
                 </td>
 
