--- a/app/views/pages/cancelled.html.erb
+++ b/app/views/pages/cancelled.html.erb
@@ -127,7 +127,7 @@
                 <td>
                   <p>
                     ->
-                    <%= cancelled.destination.gsub('effacé', '') %>
+                    <%= cancelled.destination %>
                   </p>
                 </td>
 
@@ -140,7 +140,7 @@
                 <td>
                   <p>
                     <-
-                    <%= cancelled.provenance.gsub('effacé', '') %>
+                    <%= cancelled.provenance %>
                   </p>
                 </td>
 
